--- a/src/app/pages/start/components/start-page/start-page.component.scss
+++ b/src/app/pages/start/components/start-page/start-page.component.scss
@@ -8,7 +8,7 @@
 }
 h2{
   margin: 12px 0 0;
-  font-family: CircularStd;
+  font-family: CircularStdBook;
   font-size: 12px;
   font-weight: normal;
   font-stretch: normal;
