box component integration test location service mock test result service date test

--- a/src/app/pages/result/components/box/box.component.html
+++ b/src/app/pages/result/components/box/box.component.html
@@ -4,7 +4,7 @@
       <ngx-skeleton-loader *ngIf="isLoading" count="1" appearance="line"
                            animation="progress"
       ></ngx-skeleton-loader>
-      <span *ngIf="!isLoading && type">
+      <span *ngIf="!isLoading && icon">
             <img [src]="icon"/>
           </span>
     </div>
